hledger/test/errors/accounts.j
#!/usr/bin/env -S hledger check accounts -f

2022/1/1
  (ß)  1
